# ToyLang

./: CMakeLists.txt  Expression.cpp  Expression.h  Lexer.l  Readme.md  asm.sh  foobar.toy  main.cpp  parser.y
